--- a/index.pug
+++ b/index.pug
@@ -10,6 +10,13 @@ html(lang="en")
     link(rel="stylesheet" href="styles.css")
 
   body(class="bg-black min-h-screen")
+    //- Top notification banner (hidden by default)
+    div#emptyBanner(class="fixed top-0 left-0 w-full z-50 bg-red-600 text-white text-center py-3 px-4 font-small flex items-center justify-center transition-all duration-300", style="display: none;")
+      span.mr-2
+        i(class="fa-solid fa-circle-exclamation mr-2")
+        | Simulation stopped: The grid is empty. All cells are dead.
+      button#closeBanner(type="button" class="ml-4 text-white text-xl hover:opacity-70 focus:outline-none")
+        i(class="fa-solid fa-xmark")
     main(class="container mx-auto px-4 py-8")
       div(class="flex flex-col lg:flex-row gap-8 items-start")
         |//- Left Panel
